<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2016 Alefe Souza <http://alefesouza.com/>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">GDG-SP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="meetup_id">GDG-SP</string>
    <string name="backend_url">apps.aloogle.net/meetup/backend/</string>

    <string name="meetup">Meetup</string>
    <string name="send_notification">Enviar notificação</string>
    <string name="raffle_manager">Gerenciar sorteios</string>
    <string name="site">Site</string>
    <string name="old_meetups">Meetups antigos</string>
    <string name="facebook">Facebook</string>
    <string name="googleplus">Google+</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>

    <string name="site_url">gdgsp.org</string>
    <string name="old_meetups_url">youtube.com/channel/UC8yjEZ7-hroweXUgjPMwXNQ/videos?shelf_id=2&amp;view=2&amp;live_view=503&amp;sort=dd</string>
    <string name="facebook_url">facebook.com/GDGSaoPaulo</string>
    <string name="googleplus_url">google.com/+GDGspOrg</string>
    <string name="instagram_url">instagram.com/gdgsp</string>
    <string name="twitter_url">twitter.com/GDGSaoPaulo</string>
    <string name="youtube_url">youtube.com/channel/UCs_F2tnlETe3dt8W86aWnOA</string>
    <string name="contact_mail">organizers@gdgsp.org</string>

    <string name="contact">Contato</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>

    <string name="no_events">Não há eventos</string>
    <string name="choose_event">Escolha o evento</string>
    <string name="choose_event_type">Escolha o tipo de evento</string>

    <string name="comming">Futuros</string>
    <string name="before">Anteriores</string>
    <string name="hashtag">#GDGSP</string>

    <string name="suggest_login_title">Bem-vindo ao app do {appname}!</string>
    <string name="suggest_login_sub">Ao fazer login você:\n\n• Participa de sorteios exclusivos para quem usa o app.\n• Faz RSVP e check-in em eventos usando o aplicativo.\n• Vê a localização de meetups com localização oculta para não membros.\n• Recebe notificações sobre eventos que você marcou presença.\n\nDeseja fazer login agora?</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cancel">Cancelar</string>

    <string name="send_to_all">Enviar para todos</string>
    <string name="title">Título</string>
    <string name="link">Link (opcional)</string>
    <string name="image">Imagem (opcional)</string>
    <string name="message">Mensagem</string>
    <string name="notification_send">Notificação enviada com sucesso</string>
    <string name="notification_invalid_user">Usuário inválido</string>
    <string name="notification_try_again">Houve um erro ao enviar a notificação, tente novamente</string>

    <string name="people_go">Vão</string>
    <string name="people_wait">Esperando</string>
    <string name="people_dont_go">Não vão</string>
    <string name="raffle">SORTEAR</string>
    <string name="raffle_person">Pessoa sorteada</string>
    <string name="raffle_no_people">Não há pessoas sorteadas nesse evento</string>
    <string name="raffle_invalid">Usuário ou chave do aplicativo inválida</string>
    <string name="with_app">Pessoas com o app</string>

    <string name="sending">Enviando...</string>
    <string name="raffle_success">Seu sorteio foi enviado, boa sorte!</string>
    <string name="invalid_key">Chave do aplicativo inválida</string>

    <string name="rsvp_need">Você precisa fazer login para fazer rsvp</string>
    <string name="rsvp_need_sub">Deseja fazer login agora?</string>
    <string name="rsvp_cant">Não é possível fazer RSVP nesse evento</string>
    <string name="rsvp">RSVP</string>
    <string name="do_you_go">Você irá?</string>
    <string name="wait_list">Lista de espera</string>
    <string name="send">Enviar</string>
    <string name="rsvp_error">Erro ao enviar dados do RSVP, tente novamente</string>
    <string name="rsvp_success">RSVP realizado com sucesso</string>
    <string name="rsvp_waitlist">Você foi para a fila de espera</string>
    <string name="rsvp_no">Você marcou que não irá</string>

    <string name="login_do">Fazer login</string>
    <string name="login_success">Login realizado com sucesso</string>
    <string name="login_error">Erro ao fazer login</string>
    <string name="login_error_sub">Deseja tentar novamente?</string>
    <string name="login_nonmember">Parece que você ainda não faz parte do {appname}, deseja participar agora?</string>
    <string name="login_pending">Por favor, aguarde sua aprovação no {appname} e tente novamente</string>
    <string name="refresh">Atualizar</string>
    <string name="open_meetup">Abrir meetup</string>
    <string name="share">Compartilhar</string>
    <string name="copylink">Copiar link</string>
    <string name="link_copyed">Link copiado para a área de transferência</string>
    <string name="openinbrowser">Abrir no navegador</string>

    <string name="do_checkin">Fazer check-in</string>
    <string name="getting_qrcode">Recebendo QR Code...</string>
    <string name="checkin_need_login">Você precisa fazer login para fazer check-in</string>

    <string name="back">Voltar</string>
    <string name="forward">Avançar</string>
    <string name="cache">Limpar cache</string>
    <string name="cache2">Cache limpo!</string>

    <string name="error_message">Houve um erro ao receber os eventos</string>
    <string name="error_noevents">Não há eventos futuros</string>
	<string name="events_no_more">Não há mais eventos</string>
	<string name="tweets_no_more">Não há mais tweets nos últimos 7 dias</string>
    <string name="connection_error">Verifique sua conexão de internet</string>
    <string name="try_again">Tentar novamente</string>

    <string name="notifications">Notificações</string>
    <string name="pref_notification">Receber notificações</string>
    <string name="pref_notification_summary">Receber notificações de novos eventos, transmissões ao vivo, etc.</string>
</resources>
